# deepseek-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.ts  package-lock.json  package.json  server.json  smithery.yaml  test.ts  tsconfig.json  types.ts  util.ts
docs/: why-v4-matters.md
implementations/python/: README.md  deepseek_mcp_server.py  pyproject.toml
implementations/python/tests/: test_deepseek_client.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: main.rs
scripts/: live-smoke.mjs  remote-smoke.mjs
src/: config.ts  conversation-store.ts  index.ts  mcp-server.ts  types.ts
src/deepseek/: client.ts  schemas.ts  types.ts  v4-mapping.ts
src/transports/: http.ts
test/: deepseek-client.test.ts  mcp-server.test.ts  schemas.test.ts
