[project]
name = "deepseek-mcp-python"
version = "0.1.0"
description = "Python track for the official DeepSeek MCP server"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.12.4,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
