[package]
name = "deepseek_mcp_rust_bootstrap"
version = "0.1.0"
edition = "2021"
description = "Rust bootstrap for the official DeepSeek MCP server initiative"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1"
